# fib

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
src/: fibonacci.py
src/validators/: val_fib.py
templates/: answer.html  invalid_input.html  welcome.html
tests/: app_test.py  performance.py
