[tool.poetry]
name = "fib"
version = "0.1.0"
description = "Fib api"
authors = ["The Sam <muer.powell@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "src" },
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
